added styling throughout the site
work collaboratively with my beloved teammates, Ryan and Rob

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://musicflix.github.io/MusicFlix",
+  "homepage": "https://musicflix.github.io/project-frontend",
   "name": "react-auth-template",
   "version": "0.1.0",
   "private": true,
