--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://musicflix.github.io/project-frontend",
+  "homepage": "https://robscalesdev.github.io/network-configs",
   "name": "react-auth-template",
   "version": "0.1.0",
   "private": true,
